New field to CardBook